# MikuPan

./: .gitignore  CMakeLists.txt
cmake/: sdl3.cmake
include/: common.h  typedefs.h
include/ee/: eekernel.h  eestruct.h
include/sce/: libdma.c  libgraph.c  libgraph.h  libpad.c  libpc.h  sdl_controls.c  sdl_controls.h  sifrpc.c
resources/: README
sdk/: typedefs.h
sdk/ee/: eekernel.c  eekernel.h  eestruct.h  kernel.c
sdk/sce/: devvif0.c  devvif1.c  devvu0.c  libcdvd.c  libdma.c  libdma.h  libgifpk.c  libgifpk.h  libgraph.c  libgraph.h  libmc.c  libpad.c  libpad.h  libpc.c  libpc.h  libsdr.c  libvu0.c  libvu0.h  sif.c  sif.h  sifdev.c  sifdev.h  sifrpc.c  sifrpc.h
sdk/sce/misc/: diei.c
sdk/sce/mpeg/: audiodec.h  defs.h  libmpeg.c  vibuf.h
src/common/: file_loading.cpp  file_loading.h  logging.cpp  memory_addresses.c  memory_addresses.h  ul_math.c  utility.c
src/graphics/graph2d/: effect_obj.c  effect_oth.c  effect_scr.c  effect_sub.c  g2d_debug.c  g2d_main.c  message.c  snapshot.c  takep_pe.c  tim2.c  tim2.h  tim2_new.c  tim2_new.h
src/graphics/graph3d/: gra3d.c  leditor.c  libsg.h  load3d.c  mirror.c  sgcam.c  sgdma.c  sgdma.h  sglib.c  sglib.h  sglight.c  sglight.h  sgsgd.c  sgsu.c  sgsup.c  sgsup.h  shadow.c
src/graphics/mov/: movie.c  movie.h
src/graphics/scene/: scene.c
src/graphics/ui/: imgui_window.cpp  imgui_window.h  imgui_window_c.h
src/gs/: gs_packet_handler.c  gs_packet_handler.h  gs_server.cpp  texture_manager.cpp  texture_manager.h  texture_manager_c.h
src/ingame/: ingame.c
src/ingame/camera/: camera.c
src/ingame/enemy/: move_ctl.c
src/ingame/map/furn_spe/: furn_spe.c
src/ingame/menu/: ig_album.c  ig_album.h  ig_camra.c  ig_glst.c  ig_glst.h  ig_menu.c  ig_menu.h  ig_rank.c  ig_rank.h
src/main/: gamemain.c  main.c
src/mc/: mc_at.c
src/os/: pad.c  system.c
src/os/eeiop/: eeiop.c  eeiop.h  eese.c  se_cmd.c  se_cmd.h
src/os/eeiop/cdvd/: eecdvd.c  eecdvd.h
src/outgame/: memory_album.c  outgame.c  title.c  title.h
src/outgame/btl_mode/: btl_menu.c  btl_menu.h  btl_mode.c  btl_mode.h
src/rendering/: mikupan_renderer.c  sdl_renderer.c
