cmake_minimum_required(VERSION 4.0.2)
project(MikuPan LANGUAGES C CXX)

if (NOT MSVC)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=x86-64 -Wno-implicit-function-declaration -Wno-int-conversion")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=x86-64 -Wno-implicit-function-declaration -Wno-int-conversion")
endif()

if(WIN32)
    set(CMAKE_EXE_LINKER_FLAGS "-static")
endif()

list(PREPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/MikuPan)

include(sdl3)
include(imgui)
include(spdlog)

set(MIKUPAN_SOURCES "src/common/file_loading.cpp"
        "src/common/ul_math.c"
        "src/common/utility.c"
        "src/edit/test_2d.c"
        "src/graphics/graph2d/compress.c"
        "src/graphics/graph2d/effect.c"
        "src/graphics/graph2d/effect_ene.c"
        "src/graphics/graph2d/effect_obj.c"
        "src/graphics/graph2d/effect_oth.c"
        "src/graphics/graph2d/effect_rdr.c"
        "src/graphics/graph2d/effect_scr.c"
        "src/graphics/graph2d/effect_sub.c"
        "src/graphics/graph2d/effect_sub2.c"
        "src/graphics/graph2d/g2d_debug.c"
        "src/graphics/graph2d/g2d_main.c"
        "src/graphics/graph2d/message.c"
        "src/graphics/graph2d/number.c"
        "src/graphics/graph2d/rare_ene.c"
        "src/graphics/graph2d/snapshot.c"
        "src/graphics/graph2d/subtitles.c"
        "src/graphics/graph2d/takep_pe.c"
        "src/graphics/graph2d/tim2.c"
        "src/graphics/graph2d/tim2_new.c"
        "src/graphics/graph3d/gra3d.c"
        "src/graphics/graph3d/leditor.c"
        "src/graphics/graph3d/load3d.c"
        "src/graphics/graph3d/mirror.c"
        "src/graphics/graph3d/object.c"
        "src/graphics/graph3d/sce_pp3.c"
        "src/graphics/graph3d/sgcam.c"
        "src/graphics/graph3d/sgdma.c"
        "src/graphics/graph3d/sglib.c"
        "src/graphics/graph3d/sglight.c"
        "src/graphics/graph3d/sgsgd.c"
        "src/graphics/graph3d/sgsu.c"
        "src/graphics/graph3d/sgsup.c"
        "src/graphics/graph3d/shadow.c"
        "src/graphics/motion/accessory.c"
        "src/graphics/motion/acs_dat.c"
        "src/graphics/motion/anicode.c"
        "src/graphics/motion/mdlact.c"
        "src/graphics/motion/mdldat.c"
        "src/graphics/motion/mdlwork.c"
        "src/graphics/motion/mime.c"
        "src/graphics/motion/mim_dat.c"
        "src/graphics/motion/motion.c"
        "src/graphics/mov/movie.c"
        "src/graphics/scene/fod.c"
        "src/graphics/scene/scene.c"
        "src/ingame/camera/camera.c"
        "src/ingame/enemy/ene_ctl.c"
        "src/ingame/enemy/move_ctl.c"
        "src/ingame/entry/ap_bgost.c"
        "src/ingame/entry/ap_dgost.c"
        "src/ingame/entry/ap_fgost.c"
        "src/ingame/entry/ap_ggost.c"
        "src/ingame/entry/ap_pgost.c"
        "src/ingame/entry/ap_rgost.c"
        "src/ingame/entry/ap_sgost.c"
        "src/ingame/entry/ap_zgost.c"
        "src/ingame/entry/entry.c"
        "src/ingame/event/ev_load.c"
        "src/ingame/event/ev_main.c"
        "src/ingame/event/ev_spcl.c"
        "src/ingame/event/mv_cmnd.c"
        "src/ingame/event/wan_dat.c"
        "src/ingame/event/wan_soul.c"
        "src/ingame/info/inf_disp.c"
        "src/ingame/map/furn_spe/adj_valg.c"
        "src/ingame/map/furn_spe/fsla_main.c"
        "src/ingame/map/furn_spe/fspe_acs.c"
        "src/ingame/map/furn_spe/furn_spe.c"
        "src/ingame/map/doortype.c"
        "src/ingame/map/door_conte.c"
        "src/ingame/map/door_ctl.c"
        "src/ingame/map/find_ctl.c"
        "src/ingame/map/furn_ctl.c"
        "src/ingame/map/furn_dat.c"
        "src/ingame/map/furn_eff.c"
        "src/ingame/map/item_ctl.c"
        "src/ingame/map/map_area.c"
        "src/ingame/map/map_ctrl.c"
        "src/ingame/map/map_htck.c"
        "src/ingame/map/rotd_ctl.c"
        "src/ingame/menu/gameover.c"
        "src/ingame/menu/ig_album.c"
        "src/ingame/menu/ig_camra.c"
        "src/ingame/menu/ig_file.c"
        "src/ingame/menu/ig_glst.c"
        "src/ingame/menu/ig_map.c"
        "src/ingame/menu/ig_menu.c"
        "src/ingame/menu/ig_option.c"
        "src/ingame/menu/ig_rank.c"
        "src/ingame/menu/ig_spd_menu.c"
        "src/ingame/menu/item.c"
        "src/ingame/menu/item_get.c"
        "src/ingame/menu/pause.c"
        "src/ingame/menu/sp_menu.c"
        "src/ingame/photo/photo.c"
        "src/ingame/photo/pht_main.c"
        "src/ingame/photo/pht_make.c"
        "src/ingame/plyr/plyr_ctl.c"
        "src/ingame/plyr/time_ctl.c"
        "src/ingame/plyr/unit_ctl.c"
        "src/ingame/ig_init.c"
        "src/ingame/ingame.c"
        "src/main/gamemain.c"
        "src/main/glob.c"
        "src/main/main.c"
        "src/mc/mc_acs.c"
        "src/mc/mc_album.c"
        "src/mc/mc_at.c"
        "src/mc/mc_disp.c"
        "src/mc/mc_exec.c"
        "src/mc/mc_main.c"
        "src/mc/mc_start.c"
        "src/os/eeiop/adpcm/ea_autog.c"
        "src/os/eeiop/adpcm/ea_btlmode.c"
        "src/os/eeiop/adpcm/ea_cmd.c"
        "src/os/eeiop/adpcm/ea_ctrl.c"
        "src/os/eeiop/adpcm/ea_dat.c"
        "src/os/eeiop/adpcm/ea_event.c"
        "src/os/eeiop/adpcm/ea_furn.c"
        "src/os/eeiop/adpcm/ea_gameover.c"
        "src/os/eeiop/adpcm/ea_gdead.c"
        "src/os/eeiop/adpcm/ea_ghost.c"
        "src/os/eeiop/adpcm/ea_hiso.c"
        "src/os/eeiop/adpcm/ea_magatoki.c"
        "src/os/eeiop/adpcm/ea_map.c"
        "src/os/eeiop/adpcm/ea_puzzle.c"
        "src/os/eeiop/adpcm/ea_scene.c"
        "src/os/eeiop/adpcm/ea_shinkan.c"
        "src/os/eeiop/adpcm/ea_soul.c"
        "src/os/eeiop/adpcm/ea_tape.c"
        "src/os/eeiop/cdvd/eecdvd.c"
        "src/os/eeiop/eeiop.c"
        "src/os/eeiop/eese.c"
        "src/os/eeiop/sd_room.c"
        "src/os/eeiop/se_cmd.c"
        "src/os/eeiop/se_data.c"
        "src/os/eeiop/se_door.c"
        "src/os/eeiop/se_ev.c"
        "src/os/eeiop/se_event.c"
        "src/os/eeiop/se_foot.c"
        "src/os/eeiop/se_plyr.c"
        "src/os/eeiop/se_srund.c"
        "src/os/eeiop/se_trans.c"
        "src/os/backup.c"
        "src/os/fileload.c"
        "src/os/key_cnf.c"
        "src/os/pad.c"
        "src/os/system.c"
        "src/outgame/btl_mode/btl_menu.c"
        "src/outgame/btl_mode/btl_mode.c"
        "src/outgame/btl_mode/btl_dat.c"
        "src/outgame/memory_album.c"
        "src/outgame/mode_slct.c"
        "src/outgame/outgame.c"
        "src/outgame/scn_test.c"
        "src/outgame/sound_test.c"
        "src/outgame/title.c"
        "sdk/sce/libvu0.c"
        "sdk/sce/sifrpc.c"
        "sdk/ee/kernel.c"
        "sdk/sce/libgraph.c"
        "sdk/sce/sifdev.c"
        "sdk/sce/libdma.c"
        "sdk/sce/misc/diei.c"
        "sdk/sce/libsdr.c"
        "sdk/ee/eekernel.c"
        "sdk/sce/libgifpk.c"
        "sdk/sce/libcdvd.c"
        "sdk/sce/devvif0.c"
        "sdk/sce/devvif1.c"
        "sdk/sce/libpc.c"
        "sdk/sce/libpad.c"
        "sdk/sce/sif.c"
        "sdk/sce/devvu0.c"
        "sdk/sce/libmc.c"
        "sdk/sce/mpeg/libmpeg.c"
        "src/graphics/scene/scene_dat.c"
        "src/mc/mc.c"
        "src/mc/mc_at.c"
        "src/graphics/graph3d/vu_program.c"
        "src/common/memory_addresses.c"
        src/graphics/ui/imgui_window.cpp
        src/rendering/mikupan_renderer.c
        src/rendering/mikupan_renderer.h
        src/gs/gs_server.cpp
        src/gs/gs_server.h
        src/gs/texture_manager.cpp
        src/gs/texture_manager.h
        src/gs/gs_server_c.h
        src/gs/texture_manager_c.h
        src/graphics/ui/imgui_window_c.h
        src/common/logging.cpp
        src/common/logging.h
        src/common/logging_c.h
        src/gs/gs_packet_handler.c
        src/gs/gs_packet_handler.h
        extern/imgui_toggle/imgui_toggle.cpp
        extern/imgui_toggle/imgui_toggle_palette.cpp
        extern/imgui_toggle/imgui_toggle_presets.cpp
        extern/imgui_toggle/imgui_toggle_renderer.cpp
)

add_executable(MikuPan ${MIKUPAN_SOURCES})

target_include_directories(MikuPan PRIVATE "sdk/" "src" "resources/" "extern/" ${SDL3_INCLUDE_DIR})
target_link_libraries(MikuPan PRIVATE m imgui SDL3::SDL3 spdlog) # Link Math.h